# armenian-orthography-converter

./: .gitignore  README.md  export.json  pyproject.toml
py/: cli.py  converter.py
py/tests/: test_basic.py
py/tests/data/: test2.json  test4.json
src/armenian_orthography_converter/: converter.py
tests/: test_basic.py
tests/data/: test1.json  test3.json  test5.json
