[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "armenian-orthography-converter"
version = "0.1.0"
description = "Convert Armenian text between Soviet and classical orthography"
authors = [{name = "Njdeh Satourian"}]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
